# chip-size-diff-runner

./: CLAUDE.md  Cargo.toml  README.md  TODO.md  requirements.md
src/: defaults.rs  lib.rs  main.rs  persistence.rs  selector.rs  tag_generator.rs
src/commands/: build.rs  compare.rs  mod.rs
src/domain/: artifacts.rs  mod.rs  vcs.rs
src/runner/: build_engine.rs  common.rs  definitions.rs  diff_engine.rs  goblin_parser.rs  mod.rs  native_diff.rs  native_parser.rs  nm_diff.rs  nm_parser.rs  process.rs  symbol_diff.rs
src/runner/parsers/: goblin.rs  native.rs  nm.rs
src/ui/: fuzzy.rs
