[package]
name = "branch_diff"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
dialoguer = "0.11.0"
dirs = "5.0.1"
env_logger = "0.11.3"
goblin = "0.10.5"
log = "0.4.21"
serde = { version = "1.0.228", features = ["derive"] }
skim = "4.0.0"
toml = "1.0.6"
walkdir = "2.5.0"
