[package]
name = "branch_diff"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4"
clap = { version = "4.5.4", features = ["derive"] }
color-eyre = "0.6.5"
dialoguer = "0.11.0"
dirs = "5.0.1"
env_logger = "0.11.3"
eyre = "0.6.12"
goblin = "0.10.5"
log = "0.4.21"
owo-colors = "4.3.0"
serde = { version = "1.0.228", features = ["derive"] }
skim = "4.0.0"
toml = "1.0.6"
walkdir = "2.5.0"
which = "6.0"
